# mpi_poisson_project

./: CMakeLists.txt  LICENSE  README  README.md
CMAKE/: cleaning_script.sh
include/: define.h  fnctn.h  global_header.h  messaging.h  type.h
initio/: CMakeLists.txt  print_arrays.c  read_mesh.c
main/: CMakeLists.txt  main.c
messaging/: CMakeLists.txt  message_barrier.c  message_error.c
solver/: CMakeLists.txt  solver.c  tools.c
structs/: CMakeLists.txt  element.c  element.h  model.c  model.h  node.h  truss.h
testcase/: create_mesh  create_mesh.c  partition_mesh  partition_mesh.c  square_model
testcase/square/: simple_square.2dm
tests/: CMakeLists.txt  tests.c
